# DDR-opt

back_end/: CMakeLists.txt
back_end/include/TrajectoryOptAdapters/: DdrFinalStateAuxiliaryStateMap.hpp  DdrFormalPenaltyCostAdapter.hpp  DdrPathPenaltyCostAdapter.hpp  DdrSplineTrajectoryAdapter.hpp
back_end/include/TrajectoryOptComponents/: LinearTimeCost.hpp  PenaltyUtils.hpp  TimeMapUtils.hpp
back_end/include/TrajectoryOptComponents/SpatialCosts/: AugmentedLagrangianTargetPenalty2D.hpp  EsdfClearancePenalty2D.hpp  MeanTimeWindowPenalty.hpp  QuadraticTargetPenalty2D.hpp
back_end/include/back_end/: optimizer.h
back_end/include/traj_opt/spline/: SplineOptimizer.hpp
back_end/src/: optimizer.cpp
cmake/: UseBundledOsqp.cmake
mpc_controller/: CMakeLists.txt
mpc_controller/include/mpc_controller/: traj_anal.hpp
nmpc_controller/: CMakeLists.txt
nmpc_controller/include/nmpc_controller/: traj_anal.hpp
plan_manager/: CMakeLists.txt
plan_manager/include/plan_manager/: plan_manager.hpp
plan_manager/include/visualizer/: visualizer.hpp
plan_manager/plotjuggler/: record.xml
plan_manager/rviz/: benchmark.rviz  planner_sim.rviz
